# qaport-conduit

./: .gitignore  compose.yaml  pyproject.toml  test_api.py  test_ui.py
.github/workflows/: run-tests.yml
mock_backend/: dockerfile  main.py
pages/: github_home_page.py  github_login_page.py
