[project]
name = "qaport"
version = "0.1.0"
description = ""
authors = [
    {name = "Tha",email = "leadaxid@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "pydantic (>=2.13.4,<3.0.0)",
    "fastapi (>=0.137.2,<0.138.0)",
    "pytest (>=9.1.0,<10.0.0)",
    "playwright (>=1.60.0,<2.0.0)",
    "requests (>=2.34.2,<3.0.0)",
    "pytest-playwright (>=0.8.0,<0.9.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
